--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/classtable.html"></a>
+    <a href="/classtable.html">課表</a>
 </body>
 </html>
