--- a/classtable.html
+++ b/classtable.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/hw_20211209curriculum.html">課表</a>
+    <a href="/http://127.0.0.1:5500/hw_20211209curriculum.html">課表</a>
 </body>
 </html>
