--- a/classtable.html
+++ b/classtable.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./hw_20211209curriculum.html">課表</a>
+    <a href="./hw_20211209curriculum.html">課表</a>
 </body>
 </html>
