課表完成作業

--- a/hw_20211209curriculum.html
+++ b/hw_20211209curriculum.html
@@ -157,7 +157,7 @@
             </tr>
         </tbody>
         <tfoot>
-            <tr>
+            <tr height=60>
                 <th align="center" rowspan="9">下
                     <br>午
                 </th>
@@ -165,11 +165,11 @@
                 <td align="center" rowspan="2">80</td>
                 <td align="center">12:00
                     <br>12:40
-                </td>
+                </td>                
                 <td align="center" colspan="5">午餐時間</td>
-                <td align="center" colspan="2" rowspan="2">綜合活動</td>
-                <td align="center" rowspan="2">120</td>
-                <td align="center" rowspan="2">劉晨華</td>
+                <td align="center" colspan="2" rowspan="3">綜合活動</td>
+                <td align="center" rowspan="3">120</td>
+                <td align="center" rowspan="3">劉晨華</td>
             </tr>
             <tr>
                 <td align="center">12:40
@@ -177,25 +177,28 @@
                 </td>
                 <td align="center" colspan="5">午餐時間</td>
             </tr>
-            <tr>
-                <td align="center">5</td>
-                <td align="center">40</td>
-                <td align="center">13:30
+            <tr height=10>
+                <td align="center" rowspan="2">5</td>
+                <td align="center" rowspan="2">40</td>
+                <td align="center" rowspan="2">13:30
                     <br>14:10
                 </td>
-                <td align="center">美勞</td>
-                <td align="center">國語</td>
+                <td align="center" rowspan="2">美勞</td>
+                <td align="center" rowspan="2">國語</td>
                 <td align="center" rowspan="6">教師
                     <br>進修
                     <br>時間
                 </td>
-                <td align="center">綜合</td>
-                <td align="center">國語</td>
-                <td align="center" rowspan="2">彈性時間</td>
-                <td align="center">彈性課程</td>
-                <td align="center">160</td>
-                <td align="center">劉晨華</td>
+                <td align="center" rowspan="2">綜合</td>
+                <td align="center" rowspan="2">國語</td>
             </tr>
+            <tr>
+                <td align="center" rowspan="2">彈性時間</td>
+                <td align="center" >彈性課程</td>
+                <td align="center" >160</td>
+                <td align="center" >劉晨華</td>
+            </tr>
+            
             <tr>
                 <td align="center">6</td>
                 <td align="center">40</td>
@@ -208,13 +211,13 @@
                 <td align="center">體育</td>
                 <td align="center">英語</td>
                 <td align="center">40</td>
-                <td align="center">許淑柄</td>
+                <td align="center">許淑炳</td>
             </tr>
             <tr>
-                <td></td>
+                <td align="center"></td>
                 <td align="center">20</td>
-                <td align="center">15:20
-                    <br>16:00
+                <td align="center">15:00
+                    <br>15:20
                 </td>
                 <td align="center" colspan="2">整潔</td>
                 <td align="center" colspan="2">時間</td>
@@ -222,29 +225,28 @@
                 <td align="center" colspan="3">1280</td>
             </tr>
             <tr>
-                <td align="center" rowspan="3">7</td>
-                <td align="center" rowspan="3">40</td>
-                <td align="center" rowspan="3">15:20
+                <td align="center" rowspan="2">7</td>
+                <td align="center" rowspan="2">40</td>
+                <td align="center" rowspan="2">15:20
                     <br>16:00
                 </td>
-            </tr>
                 <td align="center" rowspan="2">彈性</td>
                 <td align="center" rowspan="2">鄉土</td>
                 <td align="center" rowspan="2">綜合</td>
                 <td align="center" rowspan="2">國語</td>
                 <td align="center" colspan="4">五年四班</td>
+            </tr>
             <tr>
                 <td align="center" colspan="4">級任導師</td>
             </tr>
-            <tr>
-                <td></td>
+            <td>
                 <td align="center">10</td>
                 <td align="center">16:00
                     <br>16:10
                 </td>
-                <td align="center" colspan="5">收穫滿行囊滿心歡喜回家去</td>
+                <td align="center" colspan="5">收穫滿行囊歡喜回家去</td>
                 <td align="center" colspan="4">劉晨華老師</td>
-            </tr>
+            </td>
         </tfoot>
     </table>
 </body>
