--- a/hw_20211215Cut version.html
+++ b/hw_20211215Cut version.html
@@ -15,6 +15,40 @@
             display: flex;
             flex-wrap: wrap;
         }
+        .banner {
+            background:url(/20211215/5a71f2_07310aa55e4a4c869120a07bb375edf8_mv2_d_2500_1667_s_2.webp)no-repeat;
+            width: 1200px;
+            height: 600px;
+        }
+        .build-school {
+            width: 1200px;
+        }
+        .build-school img {
+            float: left;
+            margin: 15px;;
+        }
+        .build-school h1 {
+            color: white;
+            text-align: left;
+            font-size: 30px;
+            margin-top: 20px;
+        }
+        .build-school h2 {
+            color: white;
+            text-align: left;
+        }
+        .build-school ul li {
+            display:inline;
+            color: white;
+            margin: 10px ;
+            text-align: center;
+        }
+        .sign-up {
+            width: 150px;
+            background-color: rgb(59, 119, 230);
+            margin: 15px;
+            padding: 15px;
+        }
         .idea {
             width: 540px;
             margin: 15px;
@@ -357,10 +391,126 @@
             margin-top: 20px;
             list-style-type: disc;
         }
+        .background-three {
+            background:url(/20211215/asset\ 7.webp)no-repeat;
+            width: 1200px;
+            height: 100px;
+            font-size: 25px;
+            color: white;
+            line-height:100px;
+            font-weight: bold;
+        }
+        .img-one {
+            width: 240px;
+            margin: 15px;
+            padding: 15px;
+            line-height: 5;
+            margin-bottom: auto;
+        }
+        .img-two {
+            width: 240px;
+            margin: 15px;
+            padding: 15px;
+            line-height: 3;
+            margin-bottom: auto;
+        }
+        .img-three {
+            width: 240px;
+            margin: 15px;
+            padding: 15px;
+            line-height: 3;
+            margin-bottom: auto;
+        }
+        .img-four {
+            width: 240px;
+            margin: 15px;
+            padding: 15px;
+            line-height: 3;
+            margin-bottom: auto;
+        }
+        .line-top {
+            border-top:solid 5px #5A5A5A ;
+            width: 1200px;
+        }
+        .cooperate {
+            width: 600px;
+            text-align: left;
+            padding: 15px;
+            margin-right: auto;
+        }
+        .cooperate h1 {
+            font-size: 20px;
+        }
+        .cooperate h2 {
+            font-size: 20px;
+            margin-top: 8px;
+            margin-right: 300px;
+            line-height: 1.2;
+        }
+        .company {
+            width: 1200px;
+            text-align: left;
+            padding: 15px;
+            line-height: 1.3;
+            font-size: 15px;
+        }
+        .logo {
+            margin-right: auto;
+        }
+        .logo p {
+            float:right;
+            margin: 15px;
+            line-height: 5;
+            text-decoration:underline
+        }
+        .logo img {
+            width: 60px;
+            height: 60px;
+            margin: 5px;
+            padding-left: 10px;
+        }
+        .date p {
+            text-align: right;
+            line-height: 5;
+        }
     </style>
 </head>
 <body>
     <div class="container-space">
+        <div class="banner">
+            <div class="build-school">
+                <img src="/20211215/asset 0.webp" alt="">
+                <h1>
+                    Build School
+                </h1>
+                <h2>
+                    developer career builder
+                </h2>
+                <ul>
+                    <li>
+                        <a href="" style="color: white ;text-decoration:none">台北班簡介</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">新竹班簡介</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">Microsoft</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">校友會-青築未來協會 Build the Future</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">Blog</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">歷屆老師</a> 
+                    </li>
+                    <li>
+                        <a href=""style="color: white;text-decoration:none">問題洽詢</a> 
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="idea">
             <img src="/20211215/service1.png" alt="">
                 <div>
@@ -522,6 +672,59 @@
                         課程過程中的線上討論、遠端溝通、或技術分享，將可透過 Microsoft Teams 或Slack 工具。另外練習的程式碼提交至 GitHub、或是 Trello 上的工作狀態更新，或是 Azure DevOps 上自動化建置的狀態，皆可發通知至 Microsoft Teams 或 Slack，透過自動化提升工作效率，並熟悉一個軟體開發團隊的協同合作
                     </li>
                 </ul>
+            </div>
+            <div class="background-three">
+                我們的講師及企業導師擁有在這些公司的工作經歷、擔任主管或資深工程師
+            </div>
+            <div class="img-one">
+                <img src="/20211215/asset 17.webp" alt="">
+                <br><img src="/20211215/asset 18.webp" alt="">
+            </div>
+            <div class="img-two">
+                <img src="/20211215/asset 19.webp" alt="">
+                <br><img src="/20211215/asset 20.webp" alt="">
+            </div>
+            <div class="img-three">
+                <img src="/20211215/asset 21.webp" alt="">
+                <br><img src="/20211215/asset 22.webp" alt="">
+            </div>
+            <div class="img-four">
+                <img src="/20211215/asset 23.webp" alt="">
+                <br><img src="/20211215/asset 24.webp" alt="">
+            </div>
+            <div class="line-top"></div>
+            <div class="cooperate">
+                <h1>
+                    合作及接洽
+                </h1>
+                <h2>
+                    若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡
+                </h2>
+            </div>
+            <div class="company">
+                <p>
+                    Build School 青杉人才有限公司 | 青群科技有限公司
+                </p>
+                <p>
+                    社團法人台灣青築未來協會 Build the Future
+                </p>
+                <p>
+                    (內政部立案 : 台內團字第 1090033261 號)
+                </p>
+                <p>
+                    email: contact@build-school.com
+                </p>
+                <p>
+                    台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)
+                </p>
+            </div>
+            <div class="logo">
+                <img src="/20211215/asset 26.webp" alt="">
+                <img src="/20211215/asset 25.webp" alt="">
+                <p>隱私權宣告</p>
+            </div>
+            <div class="date">
+                <p>© 2021 by Build School</p>
             </div>
         </div>
     </div>
