--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>楊凱安的作業</h1>
     <a href="./hw_20211209curriculum.html">課表</a>
-    <a href="/hw_20211215Cut version.html">切版</a>
+    <a href="hw_20211215cut.html">切版</a>
 </body>
 </html>
