切版作業完成

--- a/hw_20211215cut.html
+++ b/hw_20211215cut.html
@@ -20,12 +20,9 @@
             width: 1200px;
             height: 600px;
         }
-        .build-school {
-            width: 1200px;
-        }
         .build-school img {
             float: left;
-            margin: 15px;;
+            padding: 10px ;
         }
         .build-school h1 {
             color: white;
@@ -37,11 +34,13 @@
             color: white;
             text-align: left;
         }
-        .build-school ul li {
-            display:inline;
-            color: white;
-            margin: 10px ;
+        nav {
             text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 10px;
         }
         .idea {
             width: 540px;
@@ -480,29 +479,15 @@
                 <h2>
                     developer career builder
                 </h2>
-                <ul>
-                    <li>
-                        <a href="" style="color: white ;text-decoration:none">台北班簡介</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">新竹班簡介</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">Microsoft</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">校友會-青築未來協會 Build the Future</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">Blog</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">歷屆老師</a> 
-                    </li>
-                    <li>
-                        <a href=""style="color: white;text-decoration:none">問題洽詢</a> 
-                    </li>
-                </ul>
+                <nav>
+                    <a href="">台北班簡介</a>
+                    <a href="">新竹班簡介</a>
+                    <a href="">Microsoft</a>
+                    <a href="">校友會-青築未來協會 Build the Future</a>
+                    <a href="">Blog</a>
+                    <a href="">歷屆老師</a>
+                    <a href="">問題洽詢</a>
+                </nav>
             </div>
         </div>
         <div class="idea">
