--- a/hw_20211227maikon/hw_20211227maikon.html
+++ b/hw_20211227maikon/hw_20211227maikon.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="grid.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
     <div class="header">
@@ -20,14 +22,16 @@
                 <a href="#">Team</a>
                 <a href="#">Case studio</a>
                 <a href="#">Contacts</a>
+                <span>
+                    <a href="#">SUBSCRIBE</a>
+                </span>
             </nav>
         </div>
-        <p>SUBSCRIBE</p>
     </div>
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-md-5">
                     <div class="txt">
                         <h1>Our creativity is your success</h1>
                         <p>We break all boundaries if they happen on our way of project’s development!</p>
@@ -37,14 +41,14 @@
                         <img src="./hw_maikon/asset 1.svg" alt="">
                     </div>
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <div class="pic">
                         <img src="./hw_maikon/asset 2.svg" alt="">
                     </div>
                 </div>
             </div>
             <div class="row row-two">
-                <div class="col-5">
+                <div class="col-md-5">
                     <div class="txt">
                         <h1>Creative challenges are our passion</h1><p>Our team of designers and developers work closely together to build a creative and positive working environment. Functionality is as important to us as aesthetics.</p>
                     </div>
@@ -53,7 +57,7 @@
                         <a href="#">CONTACT US</a>
                     </div>
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <div class="pic">
                         <img src="./hw_maikon/asset 3.webp" alt="">
                     </div>
@@ -64,14 +68,14 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="services-title-txt">
                         <h2>We provide a wide range of creative services</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 4.svg" alt="">
                     </div>
@@ -81,7 +85,7 @@
                         <a href="#">READ MORE</a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 5.svg" alt="">
                     </div>
@@ -91,7 +95,7 @@
                         <a href="#">READ MORE</a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 6.svg" alt="">
                     </div>
@@ -103,7 +107,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 7.svg" alt="">
                     </div>
@@ -113,7 +117,7 @@
                         <a href="#">READ MORE</a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 8.svg" alt="">
                     </div>
@@ -123,7 +127,7 @@
                         <a href="#">READ MORE</a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="services-pic">
                         <img src="./hw_maikon/asset 9.svg" alt="">
                     </div>
@@ -139,7 +143,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-md-5">
                     <div class="txt">
                         <h1>If you have any questions, please contact us</h1>
                         <p>Our professional support team try to do their best to provide you with high-quality consultations concerning any question about our services.</p>
@@ -149,7 +153,7 @@
                         <a href="#">SUBSCRIBE</a>
                     </div>
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <div class="pic">
                         <img src="./hw_maikon/asset 10.svg"alt="">
                     </div>
@@ -157,41 +161,41 @@
             </div>
         </div>
     </section>
-    <section>
+    <section>    
             <div class="container">
                 <div class="row row-order-secvices">
-                    <div class="col-3">
+                    <div class="col-md-3">
                         <div class="txt-order-secvices">
                             <span>1880+</span>
                             <p>Completed projects to the end by our specialists.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-md-3">
                         <div class="txt-order-secvices">
                             <span>56</span>
                             <p>A large team of the best specialists.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="txt-order-secvices">
                             <h3>Why choose our studio for your projects?</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row row-order-secvices">
-                    <div class="col-3">
+                    <div class="col-md-3">
                         <div class="txt-order-secvices">
                             <span>2000+</span>
                             <p>Customers who were satisfied with our work.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-md-3">
                         <div class="txt-order-secvices">
                             <span>100%</span>
                             <p>Our values are good organization and result orientation.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="txt-order-secvices-instruction">
                             <p>We are a command of professional and enthusiastic people,who like what they do and are aleays in the process of growing and improving their skills.</p>
                         </div>
@@ -202,5 +206,287 @@
                 </div>
             </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="steps-txt">
+                        <h1>Steps of our work</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="pic">
+                        <img src="./hw_maikon/asset 11.svg" alt="">
+                    </div>
+                </div>
+                <div class="row row-steps">
+                    <div class="col-md-2">
+                        <div class="steps-pic">
+                            <img src="./hw_maikon/asset 13.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="steps-txt">
+                            <h2>Meeting With The Customer</h2>
+                            <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-three">
+                <div class="col-md-5">
+                    <div class="pic">
+                        <img src="./hw_maikon/asset 16.svg" alt="">
+                    </div>
+                </div>
+                <div class="row row-steps">
+                    <div class="col-md-2">
+                        <div class="steps-pic">
+                            <img src="./hw_maikon/asset 15.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="steps-txt">
+                            <h2>Meeting With The Customer</h2>
+                            <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="pic">
+                        <img src="./hw_maikon/asset 17.svg" alt="">
+                    </div>
+                </div>
+                <div class="row row-steps">
+                    <div class="col-md-2">
+                        <div class="steps-pic">
+                            <img src="./hw_maikon/asset 19.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="steps-txt">
+                            <h2>Meeting With The Customer</h2>
+                            <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-three">
+                <div class="col-md-5">
+                    <div class="pic">
+                        <img src="./hw_maikon/asset 22.svg" alt="">
+                    </div>
+                </div>
+                <div class="row row-steps">
+                    <div class="col-md-2">
+                        <div class="steps-pic">
+                            <img src="./hw_maikon/asset 21.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="steps-txt">
+                            <h2>Meeting With The Customer</h2>
+                            <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="pic">
+                        <img src="./hw_maikon/asset 23.svg" alt="">
+                    </div>
+                </div>
+                <div class="row row-steps">
+                    <div class="col-md-2">
+                        <div class="steps-pic">
+                            <img src="./hw_maikon/asset 24.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="steps-txt">
+                            <h2>Meeting With The Customer</h2>
+                            <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="steps-txt">
+                        <h1>Our team's work with Projects</h1>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="steps-txt">
+                        <a href="#">ALL PROJECTS</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="pic-projects">
+                        <img src="/hw_maikon/asset 25.webp" alt="">
+                        <div class="show">
+                            <p>Minimal Creative "Impuls"</p>
+                            <a href="#">VIEW SITE </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="pic-projects">
+                        <img src="/hw_maikon/asset 26.webp" alt="">
+                        <div class="show">
+                            <p>Travel Company "Tour Up"</p>
+                            <a href="#">VIEW SITE </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="pic-projects">
+                        <img src="/hw_maikon/asset 27.webp" alt="">
+                        <div class="show">
+                            <p>Restaurant Pizza "Little Italy"</p>
+                            <a href="#">VIEW SITE </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="pic">
+                        <img src="/hw_maikon/asset 28.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="sign-txt">
+                        <p>Sign up for our consultation</p>
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <textarea  placeholder="Message" rows="50"></textarea>
+                        <button>SEND</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subscribe-txt">
+                        <p>Subscribe to our news and learn more</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subscribe-txt">
+                        <input type="text" placeholder="Your email">
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="footer-logo">
+                            <img src="/hw_maikon/asset 0.webp" alt="">
+                        </div>
+                        <div class="footer-txt">
+                        <ul>
+                            <li>
+                                <span>phone：</span><a href="tel:+1(045)-224-12-67">0800-000-000</a>
+                            </li>
+                            <li>
+                            <span>Mail：</span><a href="mailto:">info@demolink.org</a>
+                        </li>
+                    </ul>
+                </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-txt">
+                        <p>Services</p>
+                    
+                    <ul>
+                        <li>
+                            <a href="#">Web design & brending</a>
+                        </li>
+                        <li>
+                            <a href="#">Web development</a>
+                        </li>
+                        <li>
+                            <a href="#">Full Optimization</a>
+                        </li>
+                        <li>
+                            <a href="#">Research & Strategy</a>
+                        </li>
+                        <li>
+                            <a href="#">Management & Marketing</a>
+                        </li>
+                        <li>
+                            <a href="#">Free support</a>
+                        </li>
+                    </ul>
+                </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-txt">
+                        <p>About Company</p>
+                    
+                    <ul>
+                        <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Team</a>
+                        </li>
+                        <li>
+                            <a href="#">Full Optimization</a>
+                        </li>
+                        <li>
+                            <a href="#">Case studio</a>
+                        </li>
+                        <li>
+                            <a href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-txt">
+                        <p>Our Social Networks</p>
+                        <p id="last">Join us in the social networks and keep up on the latest news.</p>
+                        <div class="icon">
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
